add default ejs template

--- a/template/redirect.ejs
+++ b/template/redirect.ejs
@@ -1,3 +1,4 @@
+<link rel="canonical" href="<%- page.redirect_to %> " />
 <% const newUrl = full_url_for(page.target.path) %>
 
 <h1>Page address was changed</h1>
