--- a/template/hexo-generator-redirect.ejs
+++ b/template/hexo-generator-redirect.ejs
@@ -1,5 +1,5 @@
 <link rel="canonical" href="<%- page.redirect_to %> " />
-<% const newUrl = full_url_for(page.target.path) %>
+<% const newUrl = typeof page !== 'undefined' && typeof page.target !== 'undefined' && page.target.path ? full_url_for(page.target.path) : typeof page.redirect_to === 'string' ? full_url_for(page.redirect_to) : null %>
 
 <h1>Page address was changed</h1>
 <p>The new page address is <a href="<%= newUrl %>"><%= newUrl %></a></p>
